--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "food-festival",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "assets/js/script.js",
   "scripts": {
     "webpack": "webpack --watch",
     "build": "Webpack",
-    "start:dev": "webpack-dev-server",
+    "start:dev": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
